Fix maven tests